# -qa_guru_python_3_17_poetry

./: README.md
test_project/: pyproject.toml
test_project/tests/: test_demo.py
